# vsag

./: .clang-format  .clang-tidy  .gitignore  .mergify.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  DMQ.prompt.md  Doxyfile  Makefile  PROXIMITY_LOG.md  README.md  SECURITY.md  TASK.md  TEST.md  blog_revision_task.md  build_win.bat  build_win.ps1  create_old_version_index.cpp  dmq_test_task.md  log.txt  multi_vector_index.py  perf.data  plan.md  quora_multivector_demo.py  streaming-serialization-GPT.md  streaming-serialization-Opus.md  streaming-serialization.md  target_files.txt  test.sh  test_duplicate_plan.md  v0.13.0_hnsw.index  v0.14.6_hnsw_search.json  v0.16.0_hgraph_build.json  v0.18.1_hgraph_search.json  v0.18.3_hnsw_build.json  version_index.cpp
src/: CMakeLists.txt  attr_value_map.h  base_filter_functor.h  bitset_impl.cpp  bitset_impl.h  buffer_wrapper.h  common.h  constants.cpp  data_type.h  dataset_impl.cpp  dataset_impl.h  dataset_impl_test.cpp  default_thread_pool.cpp  default_thread_pool.h  distances.cpp  engine.cpp  factory.cpp  index_common_param.cpp  index_feature_list.cpp  inner_string_params.h  json_wrapper.cpp  json_wrapper.h  json_wrapper_test.cpp  label_table.cpp  label_table.h  label_table_test.cpp  merge_index.cpp  merge_index.h  options.cpp  options_test.cpp  parameter.h  parameter_check.cpp  parameter_generator.cpp  prefetch.cpp  prefetch.h  query_context.h  reader.cpp  resource.cpp  resource_owner_wrapper.h  safe_allocator.h  (+13 more)
src/algorithm/: CMakeLists.txt  brute_force.cpp  brute_force.h  brute_force_parameter.cpp  brute_force_parameter_test.cpp  build_cache.cpp  build_cache.h  faiss.cpp  faiss.h  faiss_parameter.cpp  faiss_parameter.h  hgraph.cpp  hgraph.h  hgraph_build_cache_test.cpp  hgraph_diskann_loader.cpp  hgraph_diskann_loader.h  hgraph_diskann_loader_test.cpp  hgraph_parameter.cpp  hgraph_parameter.cpp.save  hgraph_parameter.h  hgraph_parameter_test.cpp  index_search_parameter.h  inner_index_interface.cpp  inner_index_interface.h  inner_index_interface_test.cpp  inner_index_parameter.cpp  inner_index_parameter.h  inner_index_parameter_test.cpp  ivf.cpp  ivf.h  ivf_nearest_classify_test.cpp  ivf_nearest_partition.cpp  ivf_parameter.cpp  ivf_parameter.h  ivf_parameter_test.cpp  mci.cpp  mci.h  mci_parameter.cpp  mci_parameter.h  mci_parameter_test.cpp  (+13 more)
src/analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.h  analyzer_test.cpp  hgraph_analyzer.cpp  hgraph_analyzer.h  hgraph_analyzer_test.cpp  pyramid_analyzer.cpp  pyramid_analyzer.h  sindi_analyzer.cpp  sindi_analyzer.h
src/attr/: CMakeLists.txt  argparse.h  attr_type_schema.cpp  attr_type_schema.h  attr_value_map.cpp  attr_value_map.h  attr_value_map_test.cpp  attribute.cpp  attribute_test.cpp  expression.h  expression_visitor.cpp  expression_visitor.h  expression_visitor_test.cpp  multi_bitset_manager.cpp  multi_bitset_manager.h
src/data_cell/: CMakeLists.txt  attribute_bucket_inverted_datacell.cpp  attribute_bucket_inverted_datacell.h  attribute_inverted_datacell.h  attribute_inverted_interface.h  bucket_datacell.h  bucket_datacell_parameter.cpp  bucket_datacell_test.cpp  bucket_interface.h  compressed_graph_datacell.cpp  compressed_graph_datacell.h  compressed_graph_datacell_parameter.h  compressed_graph_datacell_parameter_test.cpp  compressed_graph_datacell_test.cpp  extra_info_datacell.cpp  extra_info_datacell.h  extra_info_datacell_parameter.cpp  extra_info_interface.h  flatten_datacell.h  flatten_datacell_parameter.cpp  flatten_datacell_parameter.h  flatten_datacell_test.cpp  flatten_interface.cpp  flatten_interface.h  flatten_interface_test.h  graph_datacell.h  graph_datacell_parameter.cpp  graph_datacell_parameter.h  graph_datacell_test.cpp  graph_interface.cpp  graph_interface.h  graph_interface_parameter.cpp  graph_interface_parameter.h  graph_interface_test.cpp  graph_storage_type.h  mix_datacell.h  pnm_datacell.cpp  pnm_datacell.h  pnm_datacell_parameter.cpp  pnm_datacell_parameter.h  (+14 more)
src/datacell/: CMakeLists.txt  attribute_bucket_inverted_datacell.cpp  attribute_bucket_inverted_datacell.h  attribute_inverted_interface.cpp  attribute_inverted_interface.h  attribute_inverted_interface_parameter.cpp  attribute_inverted_interface_parameter.h  bucket_datacell.h  bucket_datacell_parameter.cpp  bucket_datacell_parameter.h  bucket_datacell_test.cpp  bucket_interface.cpp  bucket_interface.h  clique_datacell.cpp  clique_datacell.h  compressed_graph_datacell.cpp  compressed_graph_datacell.h  compressed_graph_datacell_parameter.h  compressed_graph_datacell_test.cpp  dense_duplicate_tracker.cpp  dense_duplicate_tracker.h  dense_duplicate_tracker_test.cpp  disk_sindi_term_datacell.cpp  disk_sindi_term_datacell.h  disk_sindi_term_datacell.inl  disk_sindi_term_datacell_test.cpp  disk_sparse_term_list_datacell.cpp  disk_sparse_term_list_datacell.h  disk_sparse_term_list_datacell.inl  disk_sparse_term_list_datacell_test.cpp  duplicate_interface.h  extra_info_datacell.h  extra_info_datacell_parameter.cpp  extra_info_datacell_parameter.h  extra_info_datacell_test.cpp  extra_info_interface.cpp  extra_info_interface.h  flatten_datacell.h  flatten_datacell_inst.cpp  flatten_datacell_inst.h  (+72 more)
src/factory/: CMakeLists.txt  engine.cpp  factory.cpp  factory_test.cpp  index_creators.cpp  index_creators.h  index_registry.h  (+3 more)
tests/: CMakeLists.txt  test_brute_force.cpp  test_diskann.cpp  test_engine.cpp  test_fc_visitor.cpp  test_fp16_bf16.cpp  test_hgraph.cpp  test_hgraph_diskann_loader.cpp  test_hgraph_duplicate_storage.cpp  test_hgraph_rabitq_split.cpp  test_hgraph_remove.cpp  test_hnsw.cpp  test_hnsw_new.cpp  test_index.cpp  test_index.h  test_index_calc.cpp  test_index_common.h  test_index_concurrent.cpp  test_index_misc.cpp  test_index_old.cpp  test_ivf.cpp  test_json_wrapper.cpp  test_main.cpp  test_mci.cpp  test_memleak.cpp  test_merge.cpp  test_multi_thread.cpp  test_pyramid.cpp  test_random_index.cpp  test_regression.cpp  test_scalar_quantization_trainer.cpp  test_simple_index.cpp  test_simq.cpp  test_sindi.cpp  test_sparse_index.cpp  test_vsag_ext.cpp  test_warp.cpp
(+1691 files in other folders)
